# semantic_search

./: .gitignore  README.md  config.yaml  handover.md  install.bat  launch.bat  pyproject.toml  requirements.txt
.claude/: settings.local.json
semantic_search/: __init__.py  cli.py  indexer.py  models.py  search.py  store.py
server/: app.py
server/templates/: index.html
